@@ -221,9 +221,9 @@ sub make_reply {
 		$reply->header->aa(1) if $headermask->{'aa'};
 		$reply->header->ra(1) if $headermask->{'ra'};
 		$reply->header->ad(1) if $headermask->{'ad'};
-		if (defined $Net::DNS::opcodesbyname{$headermask->{'opcode'}}){
-			$reply->header->opcode( $headermask->{'opcode'} );
-		}
+		$reply->header->opcode( $headermask->{'opcode'} ) if
+		  ($headermask->{'opcode'} &&
+		   defined $Net::DNS::opcodesbyname{$headermask->{'opcode'}});
 	}
 	
 	
